# LQG-Vertical-Landing-Sim

./: .gitignore  CMakeLists.txt  README.md
include/: config.hpp  controller.hpp  dynamics.hpp  kalman.hpp  noise.hpp  simulation.hpp
src/: controller.cpp  dynamics.cpp  kalman.cpp  main.cpp  noise.cpp  simulation.cpp
